--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" type="image" href="./assets/icons/Favicon/favicon.png">
   <title>Project Management App</title>
 </head>
 
